--- a/source/posts/2019/04-08-podcast-07-14.html.md
+++ b/source/posts/2019/04-08-podcast-07-14.html.md
@@ -1,5 +1,5 @@
 ---
-title: "14 выпуск 07 сезона. CanCanCan 3.0, ActionPolicy 0.3.0, Foundation 6, Visual Studio 2019, Legacy Rails, CSSBattle и прочее"
+title: "14 выпуск 07 сезона. CanCanCan 3.0, ActionPolicy 0.3.0, Native image lazy-loading for the web, Legacy Rails, CSSBattle и прочее"
 date: 2019-04-08
 tags:
  - podcasts
