--- a/source/posts/2019/04-23-podcast-07-16.html.md
+++ b/source/posts/2019/04-23-podcast-07-16.html.md
@@ -16,7 +16,7 @@ main_image: "/images/static/07/0716.png"
 
 ## Ruby
 
- - [Ruby 2.6.3 Released](https://www.ruby-lang.org/en/news/2019/04/17/ruby-2-6-3-released/), [Ruby Repository Moved to Git from Subversion](https://www.ruby-lang.org/en/news/2019/04/23/move-to-git-from-svn/), [Rails 6 adds implicit_order_column](https://blog.bigbinary.com/2019/04/16/rails-6-adds-implicit_order_column.html), [Rails 6 allows configurable attribute name on has_secure_password](https://blog.bigbinary.com/2019/04/23/rails-6-allows-configurable-attribute-name-on-has_secure_password.html), [Rails 6 allows to override the ActiveModel::Errors#full_message format at the model level and at the attribute level](https://blog.bigbinary.com/2019/04/22/rails-6-allows-to-override-the-activemodel-errors-full_message-format-at-the-model-level-and-at-the-attribute-level.html), [Ruby3 will have types](https://twitter.com/darkdimius/status/1119115657776209920) и [Pattern matching - New feature in Ruby 2.7](https://speakerdeck.com/k_tsj/pattern-matching-new-feature-in-ruby-2-dot-7)
+ - [Ruby 2.6.3 Released](https://www.ruby-lang.org/en/news/2019/04/17/ruby-2-6-3-released/), [Ruby Repository Moved to Git from Subversion](https://www.ruby-lang.org/en/news/2019/04/23/move-to-git-from-svn/), [Update your nokogiri gem to 1.10.3](https://github.com/sparklemotion/nokogiri/issues/1892), [Rails 6 adds implicit_order_column](https://blog.bigbinary.com/2019/04/16/rails-6-adds-implicit_order_column.html), [Rails 6 allows configurable attribute name on has_secure_password](https://blog.bigbinary.com/2019/04/23/rails-6-allows-configurable-attribute-name-on-has_secure_password.html), [Rails 6 allows to override the ActiveModel::Errors#full_message format at the model level and at the attribute level](https://blog.bigbinary.com/2019/04/22/rails-6-allows-to-override-the-activemodel-errors-full_message-format-at-the-model-level-and-at-the-attribute-level.html), [Ruby3 will have types](https://twitter.com/darkdimius/status/1119115657776209920) и [Pattern matching - New feature in Ruby 2.7](https://speakerdeck.com/k_tsj/pattern-matching-new-feature-in-ruby-2-dot-7)
  - [Optimizing Database Performance in Rails](https://blog.heroku.com/rails-database-optimization), [Qo - Query Object - Pattern matching and fluent querying in Ruby](https://github.com/baweaver/qo) и [Awesome Types & Type Signatures / Annotations for Ruby](https://github.com/typesigs/awesome-types)
 
 ## Web
