--- a/source/posts/2019/07-23-cafe-010.html.md
+++ b/source/posts/2019/07-23-cafe-010.html.md
@@ -11,12 +11,9 @@ audio_length: 26715827
 duration: "00:27:48"
 small_icon: mic
 main_image: "/images/static/cafe/010.png"
-published: false
 ---
 
-Добрый день уважаемые слушатели. В гостях RWpod Cafe сегодня Katrina Owen:
-
- - [Текстовая версия](https://rubyc.eu/posts/97)
+Добрый день уважаемые слушатели. В гостях RWpod Cafe сегодня Dávid Halász:
 
  - We know that you are an active Ruby community member, participating and presenting on many conferences. RubyConf.by (Minsk), Ruby Unconf (Hamburg), Ruby Wine (Moldova). Are we missing some more? What have you learned on these conferences? Any favorites?
  - What other conferences except for Ruby do you visit?
@@ -27,7 +24,6 @@ published: false
  - You have recently been promoted to Senior Software Engineer, congratulations!, what has changed for you since then? Can you share your working stories, what are you working on at present?
  - At RubyC you are presenting talk named "How to hijack, proxy and smuggle sockets with Rack/Ruby". What is story behind this talk? Why did you choose it? What pains does it help to solve?
  - One last "reading" question. What is new on your list?
-
 
  - [Web page](https://www.skateman.eu/)
  - [Github](https://github.com/skateman)
