--- a/source/posts/2019/08-26-podcast-07-34.html.md
+++ b/source/posts/2019/08-26-podcast-07-34.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "https://mp3.rwpod.com/podcasts/07/0734.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/07.34/0734.mp3"
 audio_format: "audio/mpeg"
-audio_length: 43721142
-duration: "00:36:25"
+audio_length: 45484728
+duration: "00:37:53"
 small_icon: mic
 main_image: "/images/static/07/0734.png"
 ---
@@ -23,5 +23,9 @@ main_image: "/images/static/07/0734.png"
 
  - [Hyper 3](https://hyper.is/blog), [Using Native JavaScript Modules in Production Today](https://philipwalton.com/articles/using-native-javascript-modules-in-production-today/) и [CSS Can Do This... And It's Terrifying!](https://www.aaron-powell.com/posts/2019-08-14-css-can-do-this-and-its-terrifying/)
  - [Announcing NodeGUI and React NodeGUI](https://blog.atulr.com/nodegui-intro/), [FilePond: A Flexible File Uploader with a Smooth UI](https://pqina.nl/filepond/) и [Chart.xkcd](https://timqian.com/chart.xkcd/)
+
+## Conferences
+
+ - [RubyC 2019](https://rubyc.eu/)
 
 READMORE
