--- a/source/posts/2019/10-21-podcast-07-42.html.md
+++ b/source/posts/2019/10-21-podcast-07-42.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "https://mp3.rwpod.com/podcasts/07/0742.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/07.42/0742.mp3"
 audio_format: "audio/mpeg"
-audio_length: 45535502
-duration: "00:37:55"
+audio_length: 44907030
+duration: "00:37:24"
 small_icon: mic
 main_image: "/images/static/07/0742.png"
 ---
@@ -22,6 +22,10 @@ main_image: "/images/static/07/0742.png"
 ## Web
 
  - [Announcing Ionic React](https://ionicframework.com/blog/announcing-ionic-react/), [Firefox’s New WebSocket Inspector](https://hacks.mozilla.org/2019/10/firefoxs-new-websocket-inspector/) и [7 Simple but Tricky JavaScript Interview Questions](https://dmitripavlutin.com/simple-but-tricky-javascript-interview-questions/)
- - [TinaCMS - a site editing toolkit for modern React-based sites](https://github.com/tinacms/tinacms), [Zero - a graphics pipeline implemented in JavaScript and rendered to the terminal](https://github.com/sinclairzx81/zero) и [React-three-fiber game](https://codesandbox.io/s/react-three-fiber-untitled-game-i2160)
+ - [TinaCMS - a site editing toolkit for modern React-based sites](https://github.com/tinacms/tinacms), [Zero - a graphics pipeline implemented in JavaScript and rendered to the terminal](https://github.com/sinclairzx81/zero) и [React-three-fiber game](https://codesandbox.io/s/react-three-fiber-untitled-game-4pp5r)
+
+## Conferences
+
+ - [RUBY Meditation #28](http://www.rubymeditation.com/)
 
 READMORE
