--- a/source/posts/2019/11-05-podcast-07-44.html.md
+++ b/source/posts/2019/11-05-podcast-07-44.html.md
@@ -1,5 +1,5 @@
 ---
-title: "44 выпуск 07 сезона.  и прочее"
+title: "44 выпуск 07 сезона. Firefox 70, Bazel 1.0, React.js Concurrent Mode, HTTPX, Deimos, Madge, Tetris in the URL и прочее"
 date: 2019-11-05
 tags:
  - podcasts
@@ -21,7 +21,7 @@ main_image: "/images/static/07/0744.png"
 
 ## Web
 
- - [Firefox 70 — a bountiful release for all](https://hacks.mozilla.org/2019/10/firefox-70-a-bountiful-release-for-all/), [React.js - Introducing Concurrent Mode](https://reactjs.org/docs/concurrent-mode-intro.html)
+ - [Firefox 70 — a bountiful release for all](https://hacks.mozilla.org/2019/10/firefox-70-a-bountiful-release-for-all/), [React.js - Introducing Concurrent Mode](https://reactjs.org/docs/concurrent-mode-intro.html) и [Modern JavaScript features you may have missed](http://www.breck-mckye.com/blog/2019/10/modern-javascript-features-you-may-have-missed/)
  - [Madge - create graphs from your CommonJS, AMD or ES6 module dependencies](https://github.com/pahen/madge), [Web-extension-starter - Web Extension starter to build "Write Once Run on Any Browser" extension](https://github.com/abhijithvijayan/web-extension-starter) и [Tetris in the URL](https://piet-v.github.io/)
 
 READMORE
