--- a/source/posts/2019/11-18-podcast-07-46.html.md
+++ b/source/posts/2019/11-18-podcast-07-46.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "https://mp3.rwpod.com/podcasts/07/0746.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/07.46/0746.mp3"
 audio_format: "audio/mpeg"
-audio_length: 47473480
-duration: "00:45:52"
+audio_length: 58985968
+duration: "00:57:08"
 small_icon: mic
 main_image: "/images/static/07/0746.png"
 ---
@@ -22,6 +22,6 @@ main_image: "/images/static/07/0746.png"
 ## Web
 
  - [Announcing the Bytecode Alliance: Building a secure by default, composable future for WebAssembly](https://hacks.mozilla.org/2019/11/announcing-the-bytecode-alliance/), [The Front-End Tooling Survey 2019 - Results](https://ashleynolan.co.uk/blog/frontend-tooling-survey-2019-results), [How Discord achieves native iOS performance with React Native](https://blog.discordapp.com/how-discord-achieves-native-ios-performance-with-react-native-390c84dcd502) и [Top-level await](https://v8.dev/features/top-level-await)
- - [Making instagram.com faster: Code size and execution optimizations (Part 4)](https://instagram-engineering.com/making-instagram-com-faster-code-size-and-execution-optimizations-part-4-57668be796a8), [Build your own React](https://pomb.us/build-your-own-react/), [Render React to Embedded LCD](https://github.com/doodlewind/react-ssd1306/blob/master/docs/tutorial.md), [Ky is a tiny and elegant HTTP client based on the browser Fetch API](https://github.com/sindresorhus/ky)
+ - [Making instagram.com faster: Code size and execution optimizations (Part 4)](https://instagram-engineering.com/making-instagram-com-faster-code-size-and-execution-optimizations-part-4-57668be796a8), [Build your own React](https://pomb.us/build-your-own-react/), [Render React to Embedded LCD](https://github.com/doodlewind/react-ssd1306/blob/master/docs/tutorial.md) и [Ky is a tiny and elegant HTTP client based on the browser Fetch API](https://github.com/sindresorhus/ky)
 
 READMORE
