--- a/source/posts/2019/12-30-podcast-07-51.html.md
+++ b/source/posts/2019/12-30-podcast-07-51.html.md
@@ -16,10 +16,11 @@ main_image: "/images/static/07/0751.png"
 
 ## Ruby
 
- - [Ruby 2.7.0 Released](https://www.ruby-lang.org/en/news/2019/12/25/ruby-2-7-0-released/), [Ruby 2.7 comprehensive changelog](https://rubyreferences.github.io/rubychanges/2.7.html), [JIT development progress at Ruby 2.7](https://medium.com/@k0kubun/jit-development-progress-at-ruby-2-7-d6dd62a8c76a?), [Rails 6.0.2.1 has been released](https://weblog.rubyonrails.org/2019/12/18/Rails-6-0-2-1-has-been-released/) и [Rack 1.6.12, 2.0.8 security patches](https://github.com/rack/rack/security/advisories/GHSA-hrqr-hxpp-chr3)
+ - [Ruby 2.7.0 released](https://www.ruby-lang.org/en/news/2019/12/25/ruby-2-7-0-released/), [Ruby 2.7 comprehensive changelog](https://rubyreferences.github.io/rubychanges/2.7.html), [JIT development progress at Ruby 2.7](https://medium.com/@k0kubun/jit-development-progress-at-ruby-2-7-d6dd62a8c76a?), [Rails 6.0.2.1 has been released](https://weblog.rubyonrails.org/2019/12/18/Rails-6-0-2-1-has-been-released/) и [Rack 1.6.12, 2.0.8 security patches](https://github.com/rack/rack/security/advisories/GHSA-hrqr-hxpp-chr3)
 
 ## Web
 
-
+ - [Results from the 'State of JavaScript' 2019 Survey](https://2019.stateofjs.com/)
+ - [V8 release v8.0](https://v8.dev/blog/v8-release-80), [Tesseract.js 2 released](https://tesseract.projectnaptha.com/), [A-Frame v1.0.0 - WebXR Support, AR Mode](https://aframe.io/blog/aframe-v1.0.0/)
 
 READMORE
