--- a/source/posts/2019/12-30-podcast-07-51.html.md
+++ b/source/posts/2019/12-30-podcast-07-51.html.md
@@ -1,5 +1,5 @@
 ---
-title: "51 выпуск 07 сезона.  и прочее"
+title: "51 выпуск 07 сезона. Ruby 2.7.0, Rack 1.6.12, 2.0.8 security patches, State of JavaScript, V8 release v8.0 и прочее"
 date: 2019-12-30
 tags:
  - podcasts
@@ -20,7 +20,6 @@ main_image: "/images/static/07/0751.png"
 
 ## Web
 
- - [Results from the 'State of JavaScript' 2019 Survey](https://2019.stateofjs.com/)
- - [V8 release v8.0](https://v8.dev/blog/v8-release-80), [Tesseract.js 2 released](https://tesseract.projectnaptha.com/), [A-Frame v1.0.0 - WebXR Support, AR Mode](https://aframe.io/blog/aframe-v1.0.0/)
+ - [Results from the 'State of JavaScript' 2019 Survey](https://2019.stateofjs.com/), [V8 release v8.0](https://v8.dev/blog/v8-release-80), [Tesseract.js 2 released](https://tesseract.projectnaptha.com/) и [A-Frame v1.0.0 - WebXR Support, AR Mode](https://aframe.io/blog/aframe-v1.0.0/)
 
 READMORE
