--- a/source/posts/2020/03-02-podcast-08-08.html.md
+++ b/source/posts/2020/03-02-podcast-08-08.html.md
@@ -1,5 +1,5 @@
 ---
-title: "08 выпуск 08 сезона.  и прочее"
+title: "08 выпуск 08 сезона. Happy 27th birthday, Ruby, GitHub CLI, Hanami::API, Scala.js 1.0.0, Rome, CLI Diagram и прочее"
 date: 2020-03-02
 tags:
  - podcasts
@@ -32,6 +32,12 @@ main_image: "/images/static/08/0808.png"
 
 ## Web
 
+ - [Rome - an experimental JavaScript toolchain](https://github.com/facebookexperimental/rome)
 
+
+ - [How Autotracking Works](https://www.pzuraq.com/how-autotracking-works/)
+ - [How to use requestAnimationFrame() with vanilla JS](https://gomakethings.com/how-to-use-requestanimationframe-with-vanilla-js/)
+ - [Announcing Scala.js 1.0.0](https://www.scala-js.org/news/2020/02/25/announcing-scalajs-1.0.0/)
+ - [CLI Diagram - draw needlessly complex diagrams in the console](https://github.com/Lakitna/cli-diagram)
 
 READMORE
