--- a/source/posts/2020/03-02-podcast-08-08.html.md
+++ b/source/posts/2020/03-02-podcast-08-08.html.md
@@ -1,5 +1,5 @@
 ---
-title: "08 выпуск 08 сезона. Happy 27th birthday, Ruby, GitHub CLI, Hanami::API, Scala.js 1.0.0, Rome, CLI Diagram и прочее"
+title: "08 выпуск 08 сезона. Happy 27th birthday, Ruby, GitHub CLI, Hanami::API, Scala.js 1.0.0, Rome, CLI Diagram, Buttono и прочее"
 date: 2020-03-02
 tags:
  - podcasts
@@ -33,11 +33,16 @@ main_image: "/images/static/08/0808.png"
 ## Web
 
  - [Rome - an experimental JavaScript toolchain](https://github.com/facebookexperimental/rome)
-
-
+ - [Rome, a new JavaScript Toolchain](https://jasonformat.com/rome-javascript-toolchain/)
+ - [A day in the life: how a frontend developer solves a "simple" bug](https://dev.to/codedivoire/a-day-in-the-life-how-a-frontend-developer-solves-a-simple-bug-3e98)
  - [How Autotracking Works](https://www.pzuraq.com/how-autotracking-works/)
  - [How to use requestAnimationFrame() with vanilla JS](https://gomakethings.com/how-to-use-requestanimationframe-with-vanilla-js/)
+
+
  - [Announcing Scala.js 1.0.0](https://www.scala-js.org/news/2020/02/25/announcing-scalajs-1.0.0/)
+ - [Serialize JavaScript to a superset of JSON that includes regular expressions, dates and functions](https://github.com/yahoo/serialize-javascript)
  - [CLI Diagram - draw needlessly complex diagrams in the console](https://github.com/Lakitna/cli-diagram)
+ - [Buttono - a flexible Sass mixin for creating BEM-style buttons](https://hsnaydd.github.io/buttono/)
+ - [Documentaries for Developers](https://www.youtube.com/playlist?list=PLtEPUaeDclku1ECmuN3IsUimHApukWIOf)
 
 READMORE
