--- a/source/posts/2020/03-09-podcast-08-09.html.md
+++ b/source/posts/2020/03-09-podcast-08-09.html.md
@@ -39,6 +39,8 @@ main_image: "/images/static/08/0809.png"
 
  - [7 Types of Native Errors in JavaScript You Should Know](https://blog.bitsrc.io/types-of-native-errors-in-javascript-you-must-know-b8238d40e492)
  - [The JavaScript Beginner's Handbook (2020 Edition)](https://www.freecodecamp.org/news/the-complete-javascript-handbook-f26b2c71719c/)
+ - [Awesome Demos Roundup #14](https://tympanus.net/codrops/2020/03/03/awesome-demos-roundup-14/)
+ - [Inspirational Websites Roundup #13](https://tympanus.net/codrops/2020/03/05/inspirational-websites-roundup-13/)
  - [Stryker - test your tests with mutation testing](https://stryker-mutator.io/)
  - [Vue Formulate - the easiest way to build forms with Vue](https://vueformulate.com/)
  - [Ls-lint - an extremely fast file and directory name linter](https://github.com/loeffel-io/ls-lint)
