--- a/source/posts/2020/03-23-podcast-08-11.html.md
+++ b/source/posts/2020/03-23-podcast-08-11.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "https://mp3.rwpod.com/podcasts/08/0811.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/08.11/0811.mp3"
 audio_format: "audio/mpeg"
-audio_length: 29112328
-duration: "00:28:47"
+audio_length: 37736624
+duration: "00:37:28"
 small_icon: mic
 main_image: "/images/static/08/0811.png"
 ---
@@ -28,11 +28,13 @@ main_image: "/images/static/08/0811.png"
 ## Web
 
  - [Babel 7.9.0](https://babeljs.io/blog/2020/03/16/7.9.0)
+ - [Prettier 2.0 “2020”](https://prettier.io/blog/2020/03/21/2.0.0.html)
  - [The Coronavirus App](https://coronavirus.app/map)
  - [Wikimedia (The Folks Behind Wikipedia) Are Adopting Vue.js](https://phabricator.wikimedia.org/T241180)
 
 
  - [Introduction to AntV](https://observablehq.com/@jiazhewang/introduction-to-antv)
+ - [VanillaJSChess - Simple Chess Engine Vanilla JS](https://github.com/VanillaJSChess/VanillaJSChess.github.io)
  - [tsParticles - a lightweight TypeScript library for creating particles](https://particles.matteobruni.it/)
 
 
