--- a/source/posts/2020/05-04-podcast-08-17.html.md
+++ b/source/posts/2020/05-04-podcast-08-17.html.md
@@ -1,5 +1,5 @@
 ---
-title: "17 выпуск 08 сезона. uild renamed to Ractor, is-promise post mortem, CableReady, Middy, useWorker, DarkMode и прочее"
+title: "17 выпуск 08 сезона. Guild renamed to Ractor, is-promise post mortem, CableReady, Middy, useWorker, DarkMode и прочее"
 date: 2020-05-04
 tags:
  - podcasts
