--- a/source/posts/2020/06-01-podcast-08-21.html.md
+++ b/source/posts/2020/06-01-podcast-08-21.html.md
@@ -1,5 +1,5 @@
 ---
-title: "21 выпуск 08 сезона.  и прочее"
+title: "21 выпуск 08 сезона. VCR 6.0.0, Snowpack 2.0, Brotli and Gzip Compression, AudioMass, AutoPilot, Dynamoid, Rough Notation и прочее"
 date: 2020-06-01
 tags:
  - podcasts
@@ -16,11 +16,13 @@ main_image: "/images/static/08/0821.png"
 
 ## Ruby
 
- - [Test-Driving a Decision Engine](https://medium.com/one-medical-technology/building-a-decision-engine-54f6640dd3d)
- - [Comparison of approaches to multitenancy in Rails apps](https://blog.arkency.com/comparison-of-approaches-to-multitenancy-in-rails-apps/)
- - [Brotli and Gzip Compression for Assets and JSON API in Rails](https://pawelurbanek.com/rails-gzip-brotli-compression)
- - [Two Commonly Used Rails Upgrade Strategies](https://www.fastruby.io/blog/rails/upgrades/rails-upgrade-strategies.html)
  - [Rails 6.1 adds support for signed ids to Active Record](https://blog.saeloun.com/2020/05/20/rails-6-1-adds-support-for-signed-ids-to-active-record.html)
+ - [Brotli and Gzip Compression for Assets and JSON API in Rails](https://pawelurbanek.com/rails-gzip-brotli-compression)
+ - [Test-Driving a Decision Engine](https://medium.com/one-medical-technology/building-a-decision-engine-54f6640dd3d)
+ - [Two Commonly Used Rails Upgrade Strategies](https://www.fastruby.io/blog/rails/upgrades/rails-upgrade-strategies.html)
+ - [Comparison of approaches to multitenancy in Rails apps](https://blog.arkency.com/comparison-of-approaches-to-multitenancy-in-rails-apps/)
+
+
  - [Never Query the Same Thing More Than Once](https://johnnunemaker.com/never-query-the-same-thing-more-than-once/)
  - [Creating a Ruby Gem with Rust](https://richardpatching.com/2020/05/22/creating-a-ruby-gem-with-rust.html)
  - [VCR 6.0.0](https://github.com/vcr/vcr/releases/tag/v6.0.0)
@@ -30,10 +32,12 @@ main_image: "/images/static/08/0821.png"
 ## Web
 
  - [Stack Overflow Developer Survey 2020](https://insights.stackoverflow.com/survey/2020)
- - [Snowpack 2.0](https://www.snowpack.dev/posts/2020-05-26-snowpack-2-0-release/)
- - [AudioMass - a free, open source, web-based Audio and Waveform Editor](https://audiomass.co/)
  - [A first look at records and tuples in JavaScript](https://2ality.com/2020/05/records-tuples-first-look.html)
+ - [Snowpack 2.0](https://www.snowpack.dev/posts/2020-05-26-snowpack-2-0-release/)
  - [htmx allows you to access AJAX, WebSockets and Server Sent Events directly in HTML, using attributes](https://htmx.org/)
+
+
+ - [AudioMass - a free, open source, web-based Audio and Waveform Editor](https://audiomass.co/)
  - [Fluor.js - sprinkle interactivity on your design](https://fluorjs.github.io/)
  - [AutoPilot - a simple cross-platform desktop automation library for Deno](https://github.com/divy-work/autopilot-deno)
  - [Rough Notation - a small JavaScript library to create and animate annotations on a web page](https://roughnotation.com/)
