--- a/source/posts/2020/06-16-podcast-08-23.html.md
+++ b/source/posts/2020/06-16-podcast-08-23.html.md
@@ -1,13 +1,13 @@
 ---
-title: "23 выпуск 08 сезона.  и прочее"
+title: "23 выпуск 08 сезона. DHH Interview, ES Logical assignment operators, TestBench, MyDrive, Jsgrids, Johnny-Five и прочее"
 date: 2020-06-16
 tags:
  - podcasts
 audio_url: "https://mp3.rwpod.com/podcasts/08/0823.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/08.23/0823.mp3"
 audio_format: "audio/mpeg"
-audio_length: 44481543
-duration: "00:43:40"
+audio_length: 38026655
+duration: "00:36:47"
 small_icon: mic
 main_image: "/images/static/08/0823.jpg"
 ---
@@ -30,9 +30,12 @@ main_image: "/images/static/08/0823.jpg"
 ## Web
 
  - [ECMAScript proposal: Logical assignment operators](https://2ality.com/2020/06/logical-assignment-operators.html)
- 
+ - [CORS : Understanding Cross Origin Resource Sharing](https://www.arbazsiddiqui.me/cors-understanding-cross-origin-resource-sharing/)
+
 
  - [MyDrive - an Open Source Cloud Server](https://github.com/subnub/myDrive)
+ - [Jsgrids - a list of JavaScript Spreadsheets and Data Grid Libraries](https://jsgrids.io/)
+ - [Johnny-Five - a JavaScript Robotics Programming Framework](http://johnny-five.io/)
  - [Hide secrets with invisible characters in plain text securely using passwords](https://github.com/KuroLabs/stegcloak)
 
 READMORE
