--- a/source/posts/2020/08-24-podcast-08-33.html.md
+++ b/source/posts/2020/08-24-podcast-08-33.html.md
@@ -32,7 +32,8 @@ published: false
  - [Announcing TypeScript 4.0](https://devblogs.microsoft.com/typescript/announcing-typescript-4-0/)
  - [Cypress 5.0.0](https://github.com/cypress-io/cypress/releases/tag/v5.0.0)
  - [Microsoft 365 apps say farewell to Internet Explorer 11 and Windows 10 sunsets Microsoft Edge Legacy](https://techcommunity.microsoft.com/t5/microsoft-365-blog/microsoft-365-apps-say-farewell-to-internet-explorer-11-and/ba-p/1591666)
- - [Docker best practices with Node.js](https://dev.to/nodepractices/docker-best-practices-with-node-js-4ln4)
+ - [Is the Phone Gap closed in 2020?](https://firt.dev/phonegap-end/)
+
 
  - [Why We Moved From React to Svelte](https://medium.com/better-programming/why-we-moved-from-react-to-svelte-f20afb1dc5d5)
  - [Elder.js - SEO focused, Svelte Framework & Static Site Generator](https://github.com/elderjs/elderjs)
