--- a/source/posts/2020/08-21-cafe-018.html.md
+++ b/source/posts/2020/08-21-cafe-018.html.md
@@ -35,5 +35,6 @@ main_image: "/images/static/cafe/018.jpg"
  - [Personal blog](ttps://medium.com/@metnew)
  - [Github](https://github.com/Metnew)
  - [Twitter](https://twitter.com/vladimir_metnew)
+ - [Hackerone page](https://hackerone.com/metnew)
 
 READMORE
