--- a/source/posts/2020/09-07-podcast-08-35.html.md
+++ b/source/posts/2020/09-07-podcast-08-35.html.md
@@ -1,16 +1,15 @@
 ---
-title: "35 выпуск 08 сезона. NativeScript 7.0, Underscore.js 1.11.0, Ruby Rightward assignments, RubyKaigi Takeout 2020, CindyJS, Volt и прочее"
+title: "35 выпуск 08 сезона. NativeScript 7.0, Underscore.js 1.11.0, Ruby Rightward assignments, RubyKaigi Takeout 2020 и прочее"
 date: 2020-09-07
 tags:
  - podcasts
 audio_url: "https://mp3.rwpod.com/podcasts/08/0835.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/08.35/0835.mp3"
 audio_format: "audio/mpeg"
-audio_length: 41634822
-duration: "00:40:37"
+audio_length: 47513176
+duration: "00:46:11"
 small_icon: mic
 main_image: "/images/static/08/0835.png"
-published: false
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
