--- a/source/posts/2020/09-14-podcast-08-36.html.md
+++ b/source/posts/2020/09-14-podcast-08-36.html.md
@@ -18,7 +18,7 @@ main_image: "/images/static/08/0836.png"
 
  - [Rails 5.2.4.4 and 6.0.3.3 have been released](https://weblog.rubyonrails.org/2020/9/10/Rails-5-2-4-4-and-6-0-3-3-have-been-released/)
  - [Sinatra v2.1.0](http://sinatrarb.com/2020/09/05/sinatra-2.1.0.html)
- - [Ruby adds Symbol#name to return frozen string corresponding to the symbol name](https://blog.saeloun.com/2020/09/09/ruby-adds-name-method-to-symbol)
+ - [Ruby adds 'Symbol#name' to return frozen string corresponding to the symbol name](https://blog.saeloun.com/2020/09/09/ruby-adds-name-method-to-symbol)
  - [Writing a Ractor-based web server](https://kirshatrov.com/2020/09/08/ruby-ractor-web-server/)
 
 
