--- a/source/posts/2020/08-21-cafe-018.html.md
+++ b/source/posts/2020/08-21-cafe-018.html.md
@@ -32,7 +32,7 @@ main_image: "/images/static/cafe/018.jpg"
 
 #### Pages
 
- - [Personal blog](ttps://medium.com/@metnew)
+ - [Personal blog](https://medium.com/@metnew)
  - [Github](https://github.com/Metnew)
  - [Twitter](https://twitter.com/vladimir_metnew)
  - [Hackerone page](https://hackerone.com/metnew)
