--- a/source/posts/2020/10-12-podcast-08-40.html.md
+++ b/source/posts/2020/10-12-podcast-08-40.html.md
@@ -10,7 +10,7 @@ audio_length: 48883004
 duration: "00:47:30"
 small_icon: mic
 main_image: "/images/static/08/0840.png"
-pubslihed: false
+published: false
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
