--- a/source/posts/2020/10-12-podcast-08-40.html.md
+++ b/source/posts/2020/10-12-podcast-08-40.html.md
@@ -31,8 +31,8 @@ published: false
 
  - [Webpack 5 release](https://webpack.js.org/blog/2020-10-10-webpack-5-release/)
  - [clamp() for Responsive Design](https://calebhearth.com/clamp-for-responsive-design)
- - [Understanding TypeScript Generics](https://www.smashingmagazine.com/2020/10/understanding-typescript-generics/)
  - [Go, WebAssembly, HTTP requests and Promises](https://withblue.ink/2020/10/03/go-webassembly-http-requests-and-promises.html)
+ - [Top 10 games from the JS13K 2020 competition](https://github.blog/2020-10-11-top-ten-games-from-the-js13k-2020-competition/)
 
 
  - [Boa release v0.10](https://boa-dev.github.io/2020/10/02/boa-release-10.html)
