--- a/source/posts/2020/10-12-podcast-08-40.html.md
+++ b/source/posts/2020/10-12-podcast-08-40.html.md
@@ -6,11 +6,10 @@ tags:
 audio_url: "https://mp3.rwpod.com/podcasts/08/0840.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/08.40/0840.mp3"
 audio_format: "audio/mpeg"
-audio_length: 48883004
-duration: "00:47:30"
+audio_length: 43316148
+duration: "00:42:00"
 small_icon: mic
 main_image: "/images/static/08/0840.png"
-published: false
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
@@ -38,6 +37,6 @@ published: false
  - [Boa release v0.10](https://boa-dev.github.io/2020/10/02/boa-release-10.html)
  - [ZzFXM - A tiny JavaScipt music generator](https://keithclark.co.uk/articles/zzfxm/)
  - [Npmx - an advanced CLI interface for npm](https://github.com/terminal-junkies/npmx)
- - [Volta - Start your engines](https://github.com/volta-cli/volta)
+ - [Volta - hassle-free way to manage your JavaScript command-line tools](https://volta.sh/)
 
 READMORE
