--- a/source/posts/2020/11-23-podcast-08-46.html.md
+++ b/source/posts/2020/11-23-podcast-08-46.html.md
@@ -1,16 +1,15 @@
 ---
-title: "46 выпуск 08 сезона.  и прочее"
+title: "46 выпуск 08 сезона. Benchmarking JSON Parsers, Ractor::TVar, High Voltage, Upptime, Txtai, Jose и прочее"
 date: 2020-11-23
 tags:
  - podcasts
 audio_url: "https://mp3.rwpod-assets.com/podcasts/08/0846.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/08.46/0846.mp3"
 audio_format: "audio/mpeg"
-audio_length: 49482259
-duration: "00:47:27"
+audio_length: 39466021
+duration: "00:38:11"
 small_icon: mic
 main_image: "/images/static/08/0846.png"
-published: false
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
@@ -35,6 +34,7 @@ published: false
 
 
  - [Super simple start to Firebase functions](https://kentcdodds.com/blog/super-simple-start-to-firebase-functions)
+ - [Upptime - is the open-source uptime monitor and status page, powered entirely by GitHub Actions and Issues](https://github.com/upptime/upptime)
  - [Txtai - AI-powered search engine for JavaScript](https://github.com/neuml/txtai.js)
  - [Jose - universal "JSON Web Almost Everything" - JWA, JWS, JWE, JWT, JWK with no dependencies using native crypto runtimes](https://github.com/panva/jose)
 
