--- a/source/posts/2021/01-11-podcast-09-01.html.md
+++ b/source/posts/2021/01-11-podcast-09-01.html.md
@@ -17,6 +17,13 @@ published: false
 
 ## Ruby
 
+ - [Rails 6.1 allows default_scope to be run on all queries](https://bigbinary.com/blog/rails-6-1-allows-default_scope-to-be-run-on-all-queries)
+ - [Ruby 3.0 and the new FiberScheduler interface](http://www.wjwh.eu/posts/2020-12-28-ruby-fiber-scheduler-c-extension.html)
+ - [Private Is For Humans](https://www.rubypigeon.com/posts/private-is-for-humans/)
+
+
+ - [Sord - a Sorbet and YARD crossover. It can automatically generate RBI and RBS type signature files by looking at the types specified in YARD documentation comments](https://github.com/AaronC81/sord)
+ - [Yet Another Serialization Library](https://andymaleh.blogspot.com/2020/12/yet-another-serialization-library.html)
  - [Raytrace-ruby - raytracing in Ruby](https://github.com/pawptart/raytrace-ruby)
 
 ## Web
