--- a/source/posts/2021/01-11-podcast-09-01.html.md
+++ b/source/posts/2021/01-11-podcast-09-01.html.md
@@ -28,6 +28,9 @@ published: false
 
 ## Web
 
+ - [We rendered a million web pages to find out what makes the web slow](https://catchjs.com/Blog/PerformanceInTheWild)
+
+
  - [MyDrive - a free Open Source Cloud Server (Similar To Google Drive)](https://mydrive-storage.com/)
  - [TabFS - a browser extension that mounts your browser tabs as a filesystem on your computer](https://omar.website/tabfs/)
 
