--- a/source/posts/2021/01-11-podcast-09-01.html.md
+++ b/source/posts/2021/01-11-podcast-09-01.html.md
@@ -1,6 +1,6 @@
 ---
-title: "01 выпуск 09 сезона.  и прочее"
-date: 2020-01-11
+title: "01 выпуск 09 сезона. The future of Traveling Ruby, Front-end predictions for 2021, The State Of CSS 2020 и прочее"
+date: 2021-01-11
 tags:
  - podcasts
 audio_url: "https://mp3.rwpod-assets.com/podcasts/09/0901.mp3"
@@ -19,20 +19,29 @@ published: false
 
  - [Rails 6.1 allows default_scope to be run on all queries](https://bigbinary.com/blog/rails-6-1-allows-default_scope-to-be-run-on-all-queries)
  - [Ruby 3.0 and the new FiberScheduler interface](http://www.wjwh.eu/posts/2020-12-28-ruby-fiber-scheduler-c-extension.html)
- - [Private Is For Humans](https://www.rubypigeon.com/posts/private-is-for-humans/)
+ - [Everything You Need to Know About Destructuring in Ruby 3](https://www.ruby3.dev/ruby-3-fundamentals/2021/01/06/everything-you-need-to-know-about-destructuring-in-ruby-3/)
+ - [The future of Traveling Ruby](https://www.joyfulbikeshedding.com/blog/2021-01-06-the-future-of-traveling-ruby.html)
+ - [Ruby 3, concurrency and the ecosystem](https://kirshatrov.com/2021/01/06/ruby-concurrency-and-ecosystem/)
 
 
- - [Sord - a Sorbet and YARD crossover. It can automatically generate RBI and RBS type signature files by looking at the types specified in YARD documentation comments](https://github.com/AaronC81/sord)
+ - [Nokogiri gem now ships with pre-compiled binaries for Linux and Mac](https://github.com/sparklemotion/nokogiri/releases/tag/v1.11.0)
+ - [Sord - a Sorbet and YARD crossover](https://github.com/AaronC81/sord)
  - [Yet Another Serialization Library](https://andymaleh.blogspot.com/2020/12/yet-another-serialization-library.html)
  - [Raytrace-ruby - raytracing in Ruby](https://github.com/pawptart/raytrace-ruby)
+ - [How to upgrade from Turbolinks to Hotwire & Turbo](https://gorails.com/episodes/upgrade-from-turbolinks-to-hotwire-and-turbo)
 
 ## Web
 
+ - [Front-end predictions for 2021](https://www.browserlondon.com/blog/2021/01/04/front-end-predictions-2021/)
+ - [The State Of CSS 2020](https://2020.stateofcss.com/en-US/report/)
  - [We rendered a million web pages to find out what makes the web slow](https://catchjs.com/Blog/PerformanceInTheWild)
+ - [Google PageSpeed Insights: The Truth About Scoring 100/100](https://kinsta.com/blog/google-pagespeed-insights/)
 
 
  - [MyDrive - a free Open Source Cloud Server (Similar To Google Drive)](https://mydrive-storage.com/)
  - [TabFS - a browser extension that mounts your browser tabs as a filesystem on your computer](https://omar.website/tabfs/)
+ - [Xstyled - a utility-first CSS-in-JS framework built for React](https://xstyled.dev/)
+ - [Project Lightspeed - a self contained OBS -> FTL -> WebRTC live streaming server](https://github.com/GRVYDEV/Project-Lightspeed)
 
 
 READMORE
