--- a/source/posts/2021/01-18-podcast-09-02.html.md
+++ b/source/posts/2021/01-18-podcast-09-02.html.md
@@ -1,5 +1,5 @@
 ---
-title: "02 выпуск 09 сезона.  и прочее"
+title: "02 выпуск 09 сезона. State of JS 2020, Ruby on Google Cloud Functions, Altair GraphQL Client, Compiled и прочее"
 date: 2021-01-18
 tags:
  - podcasts
@@ -30,7 +30,15 @@ published: false
 
 ## Web
 
+ - [State of JS 2020](https://2020.stateofjs.com/en-US/)
+ - [Advanced Promise Patterns: Promise Memoization](https://www.jonmellman.com/posts/promise-memoization)
+ - [How to implement an exponential backoff retry strategy in Javascript](https://advancedweb.hu/how-to-implement-an-exponential-backoff-retry-strategy-in-javascript/)
+ - [Deploying a Serverless Jamstack Site with RedwoodJS, Fauna, and Vercel](https://css-tricks.com/deploying-a-serverless-jamstack-site-with-redwoodjs-fauna-and-vercel/)
 
 
+ - [Altair GraphQL Client](https://altair.sirmuel.design/)
+ - [Compiled - build time atomic CSS-in-JS](https://compiledcssinjs.com/)
+ - [Handtrack.js - a library for prototyping realtime handtracking in the browser](https://victordibia.com/handtrack.js/#/)
+ - [How to Fall In Love With Single Div Illustrations](https://www.albertwalicki.com/fall-in-love-with-single-div-images)
 
 READMORE
