--- a/source/posts/2021/02-01-podcast-09-04.html.md
+++ b/source/posts/2021/02-01-podcast-09-04.html.md
@@ -1,5 +1,5 @@
 ---
-title: "04 выпуск 09 сезона.  и прочее"
+title: "04 выпуск 09 сезона. Logidze 1.0, WCAG 3.0, Brakeman 5.0.0, Ruby DnsMock, RBS Syntax Highlighting, RunJS и прочее"
 date: 2021-02-01
 tags:
  - podcasts
@@ -36,8 +36,13 @@ published: false
  - [How to Migrate an App From Webpack to Snowpack](https://primalskill.blog/how-to-migrate-an-app-from-webpack-to-snowpack)
 
 
+ - [Что но­во­го в WCAG 3.0](https://web-standards.ru/articles/wcag3-changes/)
  - [Cypress vs Selenium vs Playwright vs Puppeteer speed comparison](https://blog.checklyhq.com/cypress-vs-selenium-vs-playwright-vs-puppeteer-speed-comparison/)
  - [TOAST UI Chart 4.0 is here!](https://ui.toast.com/weekly-pick/en_20210126)
  - [RunJS - a JavaScript playground for your desktop](https://runjs.app/)
+
+## Прямой эфир
+
+ - [RWpod - 05 выпуск 09 сезона](https://www.youtube.com/watch?v=2GiJdmjXfpk)
 
 READMORE
