--- a/source/posts/2021/02-06-podcast-09-05.html.md
+++ b/source/posts/2021/02-06-podcast-09-05.html.md
@@ -31,6 +31,11 @@ published: false
  - [Image Editor using CamanJS](https://piyushsinha.tech/image-editor-using-camanjs)
  - [Deskreen turns any device with a web browser into a secondary screen for your computer](https://github.com/pavlobu/deskreen)
 
+## Темы обсуждения
+
+ - [Ruby 3.0.0](https://www.ruby-lang.org/en/news/2020/12/25/ruby-3-0-0-released/)
+ - [Hotwire](https://hotwire.dev/)
+
 ## Прямой эфир
 
  - [RWpod - 05 выпуск 09 сезона](https://www.youtube.com/watch?v=2GiJdmjXfpk)
