--- a/source/posts/2021/02-06-podcast-09-05.html.md
+++ b/source/posts/2021/02-06-podcast-09-05.html.md
@@ -1,5 +1,5 @@
 ---
-title: "05 выпуск 09 сезона.  и прочее"
+title: "05 выпуск 09 сезона. Npm 7, Parallelism in Ruby with Ractors, Super Bombinhas 1.1.0, CamanJS, Deskreen и прочее"
 date: 2021-02-06
 tags:
  - podcasts
@@ -17,17 +17,25 @@ published: false
 
 ## Ruby
 
+ - [Parallelism in Ruby with Ractors](https://lbarasti.com/post/ruby_ractor/)
  - [Understanding The bcrypt Hashing Function And Its Role in Rails](https://emmanuelhayford.com/understanding-the-bcrypt-hashing-function-and-its-role-in-rails/)
-
-
  - [Processing a compressed json stream](https://dojo4.com/blog/processing-a-compressed-json-feed)
+ - [Convert a two character ISO country code to an emoji flag](https://andycroll.com/ruby/convert-iso-country-code-to-emoji-flag/)
+
+
+ - [Sonic Pi 3.3 Released: The Rubyish Live Coding Music Synth](https://github.com/sonic-pi-net/sonic-pi/releases/tag/v3.3.0)
+ - [Introducing Sqlcommenter: An open source ORM auto-instrumentation library](https://cloud.google.com/blog/topics/developers-practitioners/introducing-sqlcommenter-open-source-orm-auto-instrumentation-library)
+ - [Super Bombinhas 1.1.0](https://github.com/victords/super-bombinhas)
 
 ## Web
 
+ - [Npm 7 is now generally available](https://github.blog/2021-02-02-npm-7-is-now-generally-available/)
+ - [Making GitHub's new homepage fast and performant](https://github.blog/2021-01-29-making-githubs-new-homepage-fast-and-performant/)
  - [3 JavaScript features that bloat your ES5 bundle](https://dev.to/alekseiberezkin/3-javascript-features-that-bloat-your-es5-bundle-3aoa)
- - [The life of a Web Component - Reversing the Shadow DOM visibility](https://hugodaniel.com/posts/the-life-of-a-web-component-reverse-shadow-dom/)
+ - [An architectural overview for WebRTC — A protocol for implementing video conferencing](https://eytanmanor.medium.com/an-architectural-overview-for-web-rtc-a-protocol-for-implementing-video-conferencing-e2a914628d0e)
 
 
+ - [JWT Authentication Best Practices](https://blog.asayer.io/jwt-authentication-best-practices)
  - [Image Editor using CamanJS](https://piyushsinha.tech/image-editor-using-camanjs)
  - [Deskreen turns any device with a web browser into a secondary screen for your computer](https://github.com/pavlobu/deskreen)
 
