--- a/source/posts/2021/02-15-podcast-09-06.html.md
+++ b/source/posts/2021/02-15-podcast-09-06.html.md
@@ -17,6 +17,7 @@ published: false
 
 ## Ruby
 
+ - [Rails 5.2.4.5, 6.0.3.5 and 6.1.2.1 have been released](https://weblog.rubyonrails.org/2021/2/10/Rails-5-2-4-5-6-0-3-5-and-6-1-2-1-have-been-released/)
  - [Rails 6.1 adds support for validating numeric values fall in a range using `in:` option](https://blog.saeloun.com/2021/02/05/add-validate-numericality-in-range)
  - [Why Wasn't Ruby 3 Faster?](https://www.fastruby.io/blog/ruby/performance/why-wasnt-ruby-3-faster.html)
  - [What is a reduction and why Fibers are the answer for Ruby concurrency](http://live.julik.nl/2021/02/why-reductions-are-important)
