--- a/source/posts/2021/02-22-podcast-09-07.html.md
+++ b/source/posts/2021/02-22-podcast-09-07.html.md
@@ -6,11 +6,10 @@ tags:
 audio_url: "https://mp3.rwpod-assets.com/podcasts/09/0907.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/09.07/0907.mp3"
 audio_format: "audio/mpeg"
-audio_length: 53370788
-duration: "00:51:49"
+audio_length: 44973827
+duration: "00:43:22"
 small_icon: mic
 main_image: "/images/static/09/0907.png"
-published: false
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
@@ -19,7 +18,7 @@ published: false
 
  - [Rails 6.1.3 has been released](https://weblog.rubyonrails.org/2021/2/17/Rails-6-1-3-has-been-released/)
  - [Rails 6.1 adds query method associated to check for the association presence](https://blog.saeloun.com/2021/02/15/rails-6-1-adds-query-method-associated-to-check-association-presence)
- - [A more secure bundler: We fixed our source priorities](https://bundler.io/blog/2021/02/15/a-more-secure-bundler-we-fixed-our-source-priorities.html)
+ - [A more secure bundler: We fixed our source priorities](https://bundler.io/blog/2021/02/15/a-more-secure-bundler-we-fixed-our-source-priorities.html) ([Revert disable_multisource changes](https://github.com/rubygems/rubygems/pull/4385))
 
 
  - [The Monotonic Clock and Why You Should Care About It](https://blog.codeminer42.com/the-monotonic-clock-and-why-you-should-care-about-it/)
