--- a/source/posts/2021/03-01-podcast-09-08.html.md
+++ b/source/posts/2021/03-01-podcast-09-08.html.md
@@ -6,11 +6,10 @@ tags:
 audio_url: "https://mp3.rwpod-assets.com/podcasts/09/0908.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/09.08/0908.mp3"
 audio_format: "audio/mpeg"
-audio_length: 44973827
-duration: "00:43:22"
+audio_length: 52323365
+duration: "00:50:21"
 small_icon: mic
 main_image: "/images/static/09/0908.png"
-published: false
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
@@ -37,5 +36,10 @@ published: false
  - [Simple-keyboard - a fast, dependency-free and customizable virtual keyboard for rich and snappy web applications](https://virtual-keyboard.js.org/)
  - [Goober - a less than 1KB css-in-js solution](https://goober.rocks/)
  - [RactivePlayer - create interactive videos in React](https://ractive-player.org/)
+
+## RWpod Cafe #19 (06.03.2021)
+
+ - [RWpod Cafe #19](https://www.youtube.com/watch?v=UM4ETbyHH_4)
+ - [Темы для выпуска](https://github.com/rwpod/cafe-discussions/discussions/3)
 
 READMORE
