--- a/source/posts/2021/03-22-podcast-09-11.html.md
+++ b/source/posts/2021/03-22-podcast-09-11.html.md
@@ -6,11 +6,10 @@ tags:
 audio_url: "https://mp3.rwpod-assets.com/podcasts/09/0911.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/09.11/0911.mp3"
 audio_format: "audio/mpeg"
-audio_length: 43144787
-duration: "00:42:03"
+audio_length: 44949044
+duration: "00:46:45"
 small_icon: mic
 main_image: "/images/static/09/0911.png"
-published: false
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
@@ -41,5 +40,10 @@ published: false
  - [Copenhagen - a free, lightweight and hackable open source code editor for the web](https://copenhagen.autocode.com/)
  - [Open MCT (Open Mission Control Technologies) - a next-generation mission control framework for visualization of data on desktop and mobile devices](https://github.com/nasa/openmct)
  - [React95 - refreshed Windows95 UI components for your modern React apps](https://github.com/arturbien/React95)
+
+
+## RWpod Cafe 20 (03.04.2021)
+
+ - [Сбор и голосование за темы новостей](https://github.com/rwpod/cafe-discussions/discussions/4)
 
 READMORE
