--- a/source/posts/2021/04-19-podcast-09-15.html.md
+++ b/source/posts/2021/04-19-podcast-09-15.html.md
@@ -41,4 +41,9 @@ published: false
  - [Lazyfill - polyfills on demand](https://github.com/nuxodin/lazyfill)
  - [Charts.css - CSS data visualization framework](https://chartscss.org/)
 
+
+## RWpod Cafe 21 (08.05.2021)
+
+ - [Сбор и голосование за темы новостей](https://github.com/rwpod/cafe-discussions/discussions/6)
+
 READMORE
