--- a/source/posts/2021/04-26-podcast-09-16.html.md
+++ b/source/posts/2021/04-26-podcast-09-16.html.md
@@ -1,17 +1,16 @@
 ---
-title: "15 выпуск 09 сезона. Hotwire, Guide To HTML Email, Skyline, Natto, Frontend Toolkit, Charts.css, Lazyfill и прочее"
+title: "16 выпуск 09 сезона. Solidus v3.0, Node.js 16, Lit, Pgvector, Aurora, WinBox, TailwindCSS, Git curate и прочее"
 date: 2021-04-26
 tags:
  - podcasts
 audio_url: "https://mp3.rwpod-assets.com/podcasts/09/0916.mp3"
 audio_format: "audio/mpeg"
-audio_size: 43960620
+audio_size: 49096160
 audio_aac_url: "https://mp3.rwpod-assets.com/podcasts/09/0916.m4a"
-audio_aac_size: 43739792
-duration: "00:45:40"
+audio_aac_size: 48786414
+duration: "00:51:01"
 small_icon: mic
 main_image: "/images/static/09/0916.png"
-published: false
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
