--- a/source/posts/2021/05-10-podcast-09-18.html.md
+++ b/source/posts/2021/05-10-podcast-09-18.html.md
@@ -1,17 +1,16 @@
 ---
-title: "18 выпуск 09 сезона.  и прочее"
+title: "18 выпуск 09 сезона. Rails 6.1.3.2, Bootstrap 5, Compacting GC in Ruby, CloudFront Functions, Mantine и прочее"
 date: 2021-05-10
 tags:
  - podcasts
 audio_url: "https://mp3.rwpod-assets.com/podcasts/09/0918.mp3"
 audio_format: "audio/mpeg"
-audio_size: 46040364
+audio_size: 54998704
 audio_aac_url: "https://mp3.rwpod-assets.com/podcasts/09/0918.m4a"
-audio_aac_size: 45793787
-duration: "00:47:50"
+audio_aac_size: 54702040
+duration: "00:57:10"
 small_icon: mic
 main_image: "/images/static/09/0918.jpg"
-published: false
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
@@ -22,6 +21,7 @@ published: false
  - [Announcing Hanami v2.0.0.alpha2](https://hanamirb.org/blog/2021/05/04/announcing-hanami-200alpha2/)
  - [Rails 7 transforms a Ruby hash into HTML attributes for ERB interpolation](https://blog.saeloun.com/2021/05/05/rails-7-transform-hash-into-html-for-erb-interpolation)
  - [Ruby Garbage Collection Deep Dive: Compaction](https://jemma.dev/blog/gc-compaction)
+ - [Compacting GC in Ruby 2.7 - Aaron Patterson](https://www.youtube.com/watch?v=H8iWLoarTZc)
  - [Fighting the primitive obsession with Value objects](https://blog.arkency.com/fighting-the-primitive-obsession-with-value-objects/)
 
 
