--- a/source/posts/2021/07-05-podcast-09-26.html.md
+++ b/source/posts/2021/07-05-podcast-09-26.html.md
@@ -33,7 +33,7 @@ main_image: "/images/static/09/0926.png"
  - [Fronts — A progressive micro frontends framework](https://unadlib.medium.com/fronts-a-progressive-micro-frontends-framework-815387b162e1)
 
 
- - [Million - <1kb virtual DOM](https://million.js.org/)
+ - [Million - &lt;1kb virtual DOM](https://million.js.org/)
  - [Petite-vue - 5kb subset of Vue optimized for progressive enhancement](https://github.com/vuejs/petite-vue)
  - [Gute - a simple web games library](https://github.com/kevglass/gute/)
 
