--- a/source/posts/2017/06-26-podcast-05-25.html.md
+++ b/source/posts/2017/06-26-podcast-05-25.html.md
@@ -16,7 +16,7 @@ main_image: "/images/static/05/0525.png"
 
 ## Ruby
 
- - [In Ruby 2.4, IPAddr#== and IPAddr#<=> do not throw exception for objects that can't be converted to IPAddr](http://blog.bigbinary.com/2017/06/21/ruby-2-4-ip-addr-methods-do-not-throw-exception-for-objects-that-cant-be-converted-to-ipaddr.html), [Upgrading shopify to rails 5](https://shopifyengineering.myshopify.com/blogs/engineering/upgrading-shopify-to-rails-5-0) и [The Only Alternative to a Rails Monolith are Micro Services? Bullshit!](https://apotonick.wordpress.com/2015/09/05/the-only-alternative-to-a-rails-monolith-are-micro-services-bullshit/)
+ - [In Ruby 2.4, IPAddr#== and IPAddr#&lt;=&gt; do not throw exception for objects that can't be converted to IPAddr](http://blog.bigbinary.com/2017/06/21/ruby-2-4-ip-addr-methods-do-not-throw-exception-for-objects-that-cant-be-converted-to-ipaddr.html), [Upgrading shopify to rails 5](https://shopifyengineering.myshopify.com/blogs/engineering/upgrading-shopify-to-rails-5-0) и [The Only Alternative to a Rails Monolith are Micro Services? Bullshit!](https://apotonick.wordpress.com/2015/09/05/the-only-alternative-to-a-rails-monolith-are-micro-services-bullshit/)
  - [Implementing Classification using Logistic Regression in Ruby](http://www.practicalai.io/implementing-classification-using-logistic-regression-in-ruby/), [Faster Rails: Indexing Large Database Tables Without Downtime](https://semaphoreci.com/blog/2017/06/21/faster-rails-indexing-large-database-tables.html), [11 Small Improvements For Ruby](http://t-a-w.blogspot.gr/2017/06/11-small-improvements-for-ruby.html) и [Private files for your Rails app using S3](https://chrisherring.co/posts/private-files-for-your-rails-app-using-s3)
  - [Crystal, TDD and Conway’s Game of Life](https://medium.com/little-programming-joys/crystal-tdd-and-conways-game-of-life-2216721b916e), [Rufo - ruby formatter](https://github.com/asterite/rufo) и [Shorten the IRB prompt (video)](https://twitter.com/wintermeyer/status/878860723304243201)
 
