--- a/source/posts/2020/07-27-podcast-08-29.html.md
+++ b/source/posts/2020/07-27-podcast-08-29.html.md
@@ -29,7 +29,7 @@ main_image: "/images/static/08/0829.png"
 
  - [JavaScript: Latest Stage-4 features](https://dev.to/hemanth/stage-4-features-5a26)
  - [Webpack: A gentle introduction](https://ui.dev/webpack/)
- - [Svelte <3 TypeScript](https://svelte.dev/blog/svelte-and-typescript)
+ - [Svelte &lt;3 TypeScript](https://svelte.dev/blog/svelte-and-typescript)
 
 
  - [Bar chart race generator](https://fabdevgit.github.io/barchartrace/)
