--- a/source/posts/2021/08-30-podcast-09-34.html.md
+++ b/source/posts/2021/08-30-podcast-09-34.html.md
@@ -5,13 +5,12 @@ tags:
  - podcasts
 audio_url: "https://mp3.rwpod-assets.com/podcasts/09/0934.mp3"
 audio_format: "audio/mpeg"
-audio_size: 33346552
+audio_size: 34435300
 audio_aac_url: "https://mp3.rwpod-assets.com/podcasts/09/0934.m4a"
-audio_aac_size: 33140910
-duration: "00:34:37"
+audio_aac_size: 34227246
+duration: "00:35:45"
 small_icon: mic
 main_image: "/images/static/09/0934.png"
-published: false
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
@@ -39,6 +38,10 @@ published: false
  - [Cssbuttons is an MIT-licensed open source project full of pure CSS & HTML buttons for developers built-in React](https://cssbuttons.app/)
  - [React-Toastify 8](https://github.com/fkhadra/react-toastify/releases/tag/v8.0.0)
 
+
+## Conferences
+
+ - [RubyRussia, 24-25 сентября 2021, онлайн](https://rubyrussia.club)
 
 ## RWpod Cafe 25 (04.09.2021)
 
