--- a/source/posts/2021/09-13-podcast-09-36.html.md
+++ b/source/posts/2021/09-13-podcast-09-36.html.md
@@ -1,5 +1,5 @@
 ---
-title: "36 выпуск 09 сезона.  и прочее"
+title: "36 выпуск 09 сезона. Rails 7 and JavaScript in 2021+, Micro-frontends, Hotwire, Importmaps, Harlem и прочее"
 date: 2021-09-13
 tags:
  - podcasts
@@ -18,11 +18,27 @@ published: false
 
 ## Ruby
 
+ - [Rails 7 adds ActiveRecord::Relation#structurally_compatible?](https://blog.saeloun.com/2021/09/07/rails-7-adds-active-record-relation-structurally-compatible)
+ - [Rails 7 will have three great answers to JavaScript in 2021+](https://world.hey.com/dhh/rails-7-will-have-three-great-answers-to-javascript-in-2021-8d68191b)
+ - [Real-time stress: AnyCable, k6, WebSockets, and Yabeda](https://evilmartians.com/chronicles/real-time-stress-anycable-k6-websockets-and-yabeda)
+
+
+ - [Distributed lock based on Google Cloud Storage](https://github.com/FooBarWidget/distributed-lock-google-cloud-storage-ruby)
  - [Hotwire for Rails Developers (video)](https://pragmaticstudio.com/hotwire-rails)
+ - [Importmaps in Rails 7 (video)](https://youtu.be/veWpot6zfUQ)
+ - [Esbuild for Rails (video)](https://youtu.be/qht_vqnYeEM)
+ - [Alpha preview: Rails 7 w/ esbuild + Tailwind CSS (video)](https://youtu.be/JsNtLiph87Y)
 
 ## Web
 
- - []()
+ - [Taking micro-frontends to the next level](https://indepth.dev/posts/1477/taking-micro-frontends-to-the-next-level)
+ - [Bundling non-JavaScript resources](https://web.dev/bundling-non-js-resources/)
+ - [Canistilluse.com](https://blog.jim-nielsen.com/2021/canistilluse.com/)
+
+
+ - [How Svelte scopes component styles](https://geoffrich.net/posts/svelte-scoped-styles/)
+ - [Exploring the CSS Paint API: Blob Animation](https://css-tricks.com/exploring-the-css-paint-api-blob-animation/)
+ - [Harlem - simple, unopinionated, lightweight and extensible state management for Vue 3](https://harlemjs.com/)
 
 ## Conferences
 
